--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "It is a TypeScript 🟦 project to begin to understand the typescript project and continue the video-media-player-web project",
   "main": "index.js",
   "scripts": {
-    "start": "parcel index.html src/*/**.html"
+    "start": "parcel index.html src/*/**.html",
+    "test": "jest -c jest.config.js --coverage"
   },
   "repository": {
     "type": "git",
@@ -23,7 +24,10 @@
   },
   "homepage": "https://github.com/zearkiatos/typescript-introduction-web#readme",
   "devDependencies": {
+    "@types/jest": "^27.0.2",
+    "jest": "^27.3.0",
     "parcel-bundler": "^1.12.5",
+    "ts-jest": "^27.0.7",
     "typescript": "^4.4.4"
   },
   "browserslist": [
