--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "parcel index.html src/*/**.html",
+    "dev": "parcel index.html src/*/**.html",
     "test": "jest -c jest.config.js --coverage"
   },
   "repository": {
