--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -25,11 +25,15 @@ jobs:
       run: npm run test
     - name: Build docker 🐳
       run: docker build . -t=typescript-introduction-web:ghb-$GITHUB_RUN_NUMBER
+    - name: Build web
+      run: |
+        npm install -g typescript
+        npm run build
     - name: Upload production-ready build files
       uses: actions/upload-artifact@v2
       with:
         name: production-files
-        path: ./
+        path: ./build
   deploy:
     name: Deploy
     needs: build
@@ -40,10 +44,10 @@ jobs:
       uses: actions/download-artifact@v2
       with:
         name: production-files
-        path: ./
+        path: ./build
 
     - name: Deploy to gh-pages
       uses: peaceiris/actions-gh-pages@v3
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./
+        publish_dir: ./build
