--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,6 +3,7 @@ stages:
   - install
   - test
   - docker
+  - build
   - deploy
 
 install-dependencies:
@@ -44,6 +45,21 @@ build-docker:
     paths:
       - build
 
+build-web:
+  stage: build
+  dependencies:
+    - install-dependencies
+    - test-app
+    - build-docker
+  script:
+    - echo "Building web"
+    - npm install -g typescript
+    - npm run build
+  artifacts:
+  expire_in: 1hr
+  paths:
+    - build
+
 pages:
   stage: deploy
   environment: staging
@@ -51,13 +67,10 @@ pages:
     - install-dependencies
     - test-app
     - build-docker
+    - build-web
   script:
     - echo "Deploy a review app 🚀"
-    - rm -rf public
-    - mkdir public
-    - mv index.html public
-    - mv assets public
-    - mv scripts public
+    - mv build public
   artifacts:
     paths:
       - public
