--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "It is a TypeScript 🟦 project to begin to understand the typescript project and continue the video-media-player-web project",
   "main": "index.js",
   "scripts": {
+    "build": "tsc scripts/*.ts scripts/**/*.ts  scripts/plugins/*.ts scripts/plugins/**/*.ts  --outDir build",
     "start": "parcel index.html src/*/**.html src/*",
     "dev": "parcel index.html src/*/**.html src/*",
     "test": "jest -c jest.config.js --coverage"
